# TaleStreamAI

./: .env.example  .env.sample  .env_old  .gitignore  MIGRATION_GUIDE.md  README.md  config_llm.py  demo_migration.py  di.txt  edge.py  main.py  pyproject.toml  repomix-output.xml  requirements.txt  run.py  run_workflow.py  run_workflow_pipeline.py  test.srt  test_board.py  test_chunking.py  test_grouped.srt  test_grouped.txt  test_migration.py  test_novel.txt  test_robust_alignment.py  test_simple_api.py  test_small_content.py  test_stream.py  test_subtitle_flow.py  word_srt_to_sentence.py  新目标.md
app/: audio.py  board.py  cache.py  chunker.py  config.py  edge.py  edge_tts_impl.py  ffmpeg_utils.py  image.py  llm_client.py  logger.py  main.py  merge_srt.py  models.py  pipeline.py  prompt.py  restore_punct.py  restore_srt.py  tool.py  tts.py  video.py  video_end.py
app/services/: audio_provider.py  base.py  image_provider.py  openai_image_provider.py
app/stages/: __init__.py  assets.py  content.py  finalizer.py  prompts.py  storyboard.py
docs/: ARCHITECTURE_AND_DATA_FLOW.md  EDGE_TTS_README.md  LLM_API_CONFIG.md  LOGGING_AND_ASYNC.md  STREAMING_LLM.md
tests/: test_chunker.py  test_comprehensive.py  test_e2e.py  test_edge_tts.py  test_grouping.py  test_novel.txt  test_openai_image_provider.py
