[project]
name = "TaleStreamAI"
version = "0.2.0"
description = "AI-powered novel to video generation pipeline using Edge TTS and Flux"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "python-dotenv>=1.0.1",
    "moviepy>=1.0.3",
    "pillow>=11.1.0",
    "psutil>=7.0.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "edge-tts>=7.0.2",
    "srt>=3.5.3",
    "openai>=1.95.1",
    "aiohttp>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
