[project]
name = "TaleStreamAI"
version = "1.0.0" # 我们可以自豪地称之为 1.0.0 版本了！
description = "A modern, asynchronous, pipeline-driven tool to automatically convert novels into videos."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "python-dotenv>=1.0.1",
    "moviepy>=1.0.3",
    "pillow>=11.1.0",
    "edge-tts>=7.0.2",
    "srt>=3.5.3",
    "openai>=1.95.1",
    "aiohttp>=3.10.0",
    "tiktoken>=0.7.0",
    "loguru>=0.7.2"
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.3" # 将 Ruff 移到开发依赖
]

[project.scripts]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
