[project]
name = "TaleStreamAI"
version = "0.3.0"
description = "AI-powered video generation from novels"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "python-dotenv>=1.0.1",
    "moviepy>=2.1.0",
    "edge-tts>=6.6.5",
    "srt>=3.5.3",
    "openai>=1.23.6",
    "aiohttp>=3.9.3",
    "tiktoken>=0.6.0",
    "loguru>=0.7.2",
    "chonkie[all]>=1.1.0",
    "json-repair>=0.47.7",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.3"
]

[project.scripts]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
